[package]
edition = "2021"
name = "rp2040-logger"
version = "0.1.0"

[dependencies]
cortex-m = { version = "0.7", features = ["inline-asm"] }
cortex-m-rt = "0.7"
embedded-hal = { version = "0.2.7", features = ["unproven"] }

defmt = "0.3"
defmt-rtt = "0.4"
panic-probe = { version = "0.3", features = ["print-defmt"] }

# We're using a Pico by default on this template
rp-pico = { version = "0.8" }
fugit = "0.3.7"
critical-section = { version = "1.1.2", features = ["restore-state-u8"] }
embedded-sdmmc = "0.6.0"
usb-device = "0.2.9"
usbd-serial = "0.1.1"
heapless = { version = "0.8.0", features = [
    "portable-atomic-critical-section",
] }
portable-atomic = { version = "1.5.1", features = ["critical-section"] }
rp2040-hal = { version = "0.9.1", features = [
    "rom-v2-intrinsics",
    "critical-section-impl",
] }

# cargo build/run
[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true

# cargo build/run --release
[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3
overflow-checks = false

# do not optimize proc-macro crates = faster builds from scratch
[profile.dev.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

[profile.release.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

# cargo test
[profile.test]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true

# cargo test --release
[profile.bench]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3
